<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chrome="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_id_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        chrome:showAsAction="ifRoom|collapseActionView"
        chrome:actionViewClass="android.support.v7.widget.SearchView"
        android:actionLayout="@layout/preferences_search"/>

    <item
        android:id="@id/menu_id_general_help"
        android:icon="@drawable/ic_help_and_feedback"
        android:title="@string/menu_help"
        chrome:showAsAction="ifRoom"/>

    <item
        android:id="@+id/export_passwords"
        android:title="@string/save_password_preferences_export_action_title"
        android:contentDescription="@string/save_password_preferences_export_action_description"
        chrome:showAsAction="never"/>
</menu>
